# composable-llm

./: .gitignore  README.md  pyproject.toml  sbatch.sh  sbtach.sh  slurm_launcher.sh
experiments/: grid_run_exp4.py  grid_run_exp5.py  grid_run_exp6.py  grid_run_exp7.py
models/: __init__.py  transformer.py
notebooks/: scratchpad.ipynb  scratchpad_result copy.ipynb  scratchpad_result.ipynb  scratchpad_transfer.ipynb  show_attention.ipynb  show_dynamics.ipynb  show_scaling.ipynb
scripts/: dissect_pretrain.py  dissect_results.py  grid_run.py  grid_run_exp1.py  grid_run_exp2.py  grid_run_exp3.py  grid_run_exp5.py  grid_run_finetune.py  grid_run_pretrain.py  grid_run_transfer.py  slurm_launcher.sh
src/cot/: config.py  grid_run.py  train.py  transfer.py  utils.py
src/cot/data/: __init__.py  data_processing.py
src/cot/evals/: __init__.py  abc.py  cot.py  io.py
src/cot/models/: mlp.py  transformer.py  utils.py
src/mathllm/: config.py  sample.py
src/mathllm/model/: pretrained_transformer.py  transformer.py
tutorial/: 1_data.ipynb  2_model.ipynb  3_pretrained_model.ipynb
